--- a/pages/account.html
+++ b/pages/account.html
@@ -7,6 +7,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/solid.css" integrity="sha384-uKQOWcYZKOuKmpYpvT0xCFAs/wE157X5Ua3H5onoRAOCNkJAMX/6QF0iXGGQV9cP" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/fontawesome.css" integrity="sha384-HU5rcgG/yUrsDGWsVACclYdzdCcn5yU8V/3V84zSrPDHwZEdjykadlgI6RHrxGrJ" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/css/styles.min.css">
   <title>Account</title>
 </head>
@@ -61,6 +63,92 @@
       </ul>
     </nav>
   </header>
+
+  <main class="main-content main--account">
+    <section class="account">
+      <div class="account-container">
+        <div class="account__pic">
+          <img src="../assets/images/user-profile-pic.jpg" alt="Profile picture">
+        </div>
+
+        <div class="account__details">
+          <div class="details__identity">
+            <span class="name"><h2>Jane Doe</h2></span>
+
+            <div class="reviews">
+              <div class="positive">
+                <span class="count">23</span>
+                <span class="fa-icon"><i class="fas fa-thumbs-up"></i></span>
+              </div>
+              <div class="negative">
+                <span class="count">3</span>
+                <span class="fa-icon"><i class="fas fa-thumbs-down"></i></span>
+              </div>
+            </div>
+          </div>
+  
+          <div class="details__skills">
+            <h3 class="title">Skills</h3>
+            <ul class="skills">
+              <li class="skill">CSS3</li>
+              <li class="skill">HTML5</li>
+              <li class="skill">JavaScript</li>
+            </ul>
+          </div>
+          
+          <div class="details__fav-place">
+            <h3 class="title">Favourite place</h3>
+            <span>Biblioteca Centrală Universitară</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="account-listings">
+      <div class="listings-container">
+        <h2>Listings</h2>
+
+        <!-- TODO: add a class to the <ul>s inside the tabs @razsbg -->
+        <div class="listings-tabs">
+          <div class="tab">
+            <input id="listings--active" type="radio" name="checkbox-group" class="tab__checkbox" checked>
+            <label for="listings--active">Active</label>
+            <div class="tab__content">
+              <ul>
+
+              </ul>
+              <p>
+                Look at that text! Would anyone use that? Can you imagine that, the text of your next webpage?! Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. I don't think anybody knows it was Russia that wrote Lorem Ipsum, but I don't know, maybe it was. It could be Russia, but it could also be China.
+              </p>
+            </div>
+          </div>
+          <div class="tab">
+            <input id="listings--completed" type="radio" name="checkbox-group" class="tab__checkbox">
+            <label for="listings--completed">Completed</label>
+            <div class="tab__content">
+              <ul>
+
+              </ul>
+              <p>
+                Using Radio Buttons: Only one radio button can be selected from a same group of radio buttons. We can take the same idea and create tabbed area using radio buttons as tabs. Using this method we can avoid Javascript completely.
+              </p>
+            </div>
+          </div>
+
+          <div class="tab">
+            <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox">
+            <label for="listings--requests">Request</label>
+            <div class="tab__content">
+              <ul></ul>
+              <p>
+                Using :target Selector: This is the most preferred way of creating tabbed area. To learn more about :target selector Click Here. In this method we have to make use of Javascript for better user experience.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <footer class="footer">
     <ul class="nav nav--footer">
